# bevy_smooth_pixel_camera

./: .cargo-rdme.toml  .gitignore  Cargo.toml  README.md  rustfmt.toml  typos.toml
.github/workflows/: release.yml  rust.yml
assets/: .checkerboard.png-autosave.kra  example_smooth.avif  smoothing_off.avif  smoothing_on.avif
examples/: all.rs  basic.rs  basic_no_smoothing.rs  high_res_toggle.rs  how_smoothing_works.rs  mix_high_res.rs  picking.rs
src/: components.rs  lib.rs  prelude.rs  systems.rs  viewport.rs
