[package]
name = "bevy_smooth_pixel_camera"
version = "0.3.0"
edition = "2021"
authors = ["Doonv"]
description = "Smooth pixel-perfect camera for Bevy"
repository = "https://github.com/doonv/bevy_smooth_pixel_camera"
categories = ["game-development", "graphics", "rendering"]
exclude = ["assets/", ".github/"]
keywords = ["game", "graphics", "bevy", "pixel", "pixel-perfect"]
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_sprite",
] }

[dev-dependencies]
bevy = "0.13"

[lints]
rust.missing_docs = "warn"
