[package]
name = "bevy_smooth_pixel_camera"
version = "0.4.0"
edition = "2024"
authors = ["Doonv"]
description = "Smooth pixel-perfect camera for Bevy"
repository = "https://github.com/doonv/bevy_smooth_pixel_camera"
categories = ["game-development", "graphics", "rendering"]
exclude = ["assets/", ".github/"]
include = ["assets/smoothing*.avif"]
keywords = ["game", "graphics", "bevy", "pixel", "pixel-perfect"]
license = "MIT OR Apache-2.0"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_log",
] }
smallvec = "1"

[dev-dependencies]
bevy = { version = "0.18.1", default-features = false, features = [
    "2d",
    "debug",
    "pan_camera",
] }

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs_dep"]
rustdoc-args = [
    "--cfg",
    "docsrs_dep",
    "--html-after-content",
    "docs-rs/trait-tags.html",
]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(docsrs_dep)'] }
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
todo = "warn"
type_complexity = "allow"
must_use_candidate = "warn"
